--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#home" class="mdl-layout__tab is-active">Home</a>
-          <a href="#about" class="mdl-layout__tab">About</a>
-          <a href="#features" class="mdl-layout__tab">Profile</a>
-          <a href="#features" class="mdl-layout__tab">Technology</a>
-          <a href="#features" class="mdl-layout__tab">FAQ</a>
+          <a href="#about" class="mdl-layout__tab">Profil</a>
+          <a href="#features" class="mdl-layout__tab">About</a>
+          <a href="#features" class="mdl-layout__tab">Scan Barcode</a>
           <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
             <i class="material-icons" role="presentation">add</i>
             <span class="visuallyhidden">Add</span>
