--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-          <a href="#home" class="mdl-layout__tab is-active">Home</a>
+          <a href="#home" class="mdl-layout__tab is-active">StorTrasher</a>
           <a href="#about" class="mdl-layout__tab">Profil</a>
           <a href="#features" class="mdl-layout__tab">About</a>
           <a href="#features" class="mdl-layout__tab">Scan Barcode</a>
